---
config:
  theme: neo-dark
---
classDiagram
direction TB

    class IPuzzlePausable {
        <<Interface>>
        + PuzzlePauseMe()
        + PuzzleResumeMe()
    }


    class GameScenes {
        <<enumeration>> 
        DevAndres
        DevBrandon
        Develop
        TempGameOver
    }

    class GameManager {
        <<Singleton>>
	    - static GameManager instance
        + enum GameScenes
	    - bool isGameOver
        - bool isPuzzleActive
	    - DataManager dataManager
	    - List~IGameOverSubscriber~ gameOverSubscribers
        - List~IPuzzlePausable~ puzzlePausables
	    - GameManager() void
        + Awake() void
	    + static GetInstance() GameManager
	    + LoadScene(scene: GameScenes) void
	    + notifySubscribers() void
	    + OnGameOver(reason: string) void
	    + OnVictory() void
	    + Subscribe(observer: IGameOverSubscriber) void
	    + Unsubscribe(observer: IGameOverSubscriber) void
        + SubscribePuzzlePausable(IPuzzlePausable) void
        + UnsubscribePuzzlePausable(IPuzzlePausable) void
        + PuzzlePauseAll() void
        + PuzzleResumeAll() void
        + SwitchIsPuzzleActive() void
    }

    class PlayerController {
	    - float moveSpeed
        + Start() void
        + Update() void
        + PuzzlePauseMe() void
        + PuzzleResumeMe() void
	    + Move(direction: Vector2) void
	    + OnGameOver() void
        + OnDestroy() void
    }

    class HealthManager {
	    - int maxLives
	    - int currentLives
	    - bool isDead
	    + TakeDamage(amount: int) void
	    + IsDead() bool
	    + NotifyDeath() void
    }

	class PuzzleHalo {
        + float pulseSpeed
        + float maxScale
        + SpriteRenderer haloSr
        + Vector3 haloBaseScale
        + float minimumTransparency
        + bool isPlayerClose
        + Start() void
        + Update() void
        + Pulse(float) void
        + Glow(float) void
        + OnTriggerEnter2D(Collider2D) void
        + OnTriggerExit2D(Collider2D) void
        + PuzzlePauseMe() void
        + PuzzleResumeMe() void
        + OnDestroy() void
    }

    class CountdownBarManager {
        -Image countdownBar
        -bool isPaused
        +static Action~int~ OnTimeChanged
        -int previousTimeRemaining
        -float timeRemaining
        -float maxTime
        + OnEnable() void
        + Update() void
        + StartCountdown() void
        + SetPaused(bool paused) void
        + ResetCountdown() void
        + TimeIsUp() void
    }

    class CountdownTextManager {
        -TextMeshProUGUI showText
        -int showMinutes
        -int showSeconds
        + OnEnable() void
        + OnDisable() void
        + UpdateTextInMinutes(int seconds) void
    }

    class IGameOverSubscriber {
	    + OnGameOver() void
    }

	

    class IPuzzleManager {
        <<interface>>
        + StartPuzzle() void
        + CompletePuzzle() void
        + GetScore() float
        + GetPerformanceResult() PerformanceResult
    }

	

    class PuzzleManager {
	    - int score
	    - FeedbackText feedbackText
        - PuzzleHalo halo
        - GameObject puzzleGameplayPrefab
        - AbstractPuzzleGameplay gameplay
        - PerformanceResult performanceResult
        - GameManager gameManager
        + bool isVictoryAchieved
        + OnTap() void
        + Start() void
        + OnDestroy() void
	    + ShowFeedback(string: qualitativeResult) void
        + PuzzlePauseMe() void
        + PuzzleResumeMe() void
         + StartPuzzle() void
	    + CompletePuzzle() void
	    + GetScore() float
	    + GetPerformanceResult() PerformanceResult
    }

	class ITappable {
        <<interface>>
        + OnTap() void
    }

	class InputHandler {
        - Raycaster raycaster
        + void Start() void
        + void OnDestroy() void
        + void OnTap(InputAction.CallbackContext context) void
    }

    class Raycaster {
        - Camera mainCamera
        + void Start() void
        + void ProcessTap(Vector2 screenPosition) void
    }

    class ControlsManager {
        - Map map
        - static Map.PlayerActions controls
        - static ControlsManager instance
        + void Awake() void
        + static Map.PlayerActions getControls() Map.PlayerActions
        + void OnEnable() void
        + void OnDisable() void
    }

    class PerformanceResult {
	    - int numericScore
	    - string qualitativeResult
		+ calculateNumericScore() void
		+ setQualitativeResult() void
	    + toString() string
    }

    class PuzzleTutorial {
	    - string title
	    - Image gifTutorial
	    - string tutorialDescription
        + close() void
    }

    class FeedbackText {
	    - string text
	    + Show(position: Vector3, text: string) void
    }

    class DataManager {
        <<singleton>>
	    - string basePath
        - static DataManager instance
        - RunData runData
	    + SaveTutorialFlag(puzzleId: string) void
	    + LoadTutorialFlag(puzzleId: string) bool
	    + SaveRunResult() void
	    + LoadRunHistory() List~RunData~
        - DataManager() void
        + getInstance() DataManager
        + savePuzzleScore(puzzleId: string) void
    }

    class RunData {
	    + int runId
	    + Dictionary~string,int[]~ puzzleScores
    }
	
    class JournalManager {
        - string[] puzzlesIds
	    + LoadDiscoveredPuzzles()
	    + ShowJournalUI()
    }
	
    class EasterEgg {
	    - bool isActivated
	    + OnClick()
	    + PlayAnimation()
    }


    %% Abstract Class
    class AbstractPuzzleGameplay {
        <<abstract>>
        # DataManager dataManager
        # GameObject background
        # bool isFirstTimePlaying
        # GameObject tutorialPrefab
        + StartGameplay() void* 
        + SpawnBackground(Vector3, Quaternion, Transform) void
        + Victory() void* 
        + Defeat() void* 
        + ShowTutorial() void
        + IsFirstTime() bool
    }

	
    GameManager <.. PuzzleHalo: subscribes

	<<interface>> IGameOverSubscriber

    IPuzzlePausable <|.. PuzzleHalo
    IPuzzlePausable <|.. PuzzleManager
    IPuzzlePausable <|.. PlayerController
    

    GameScenes --* GameManager  
    GameManager <.. PlayerController: subscribes
    GameManager <.. PuzzleManager: subscribes
    GameManager <.. CountdownBarManager : usa en TimeIsUp()
    CountdownBarManager <.. CountdownTextManager : se suscribe a OnTimeChanged

	
    PlayerController ..|> IGameOverSubscriber
    GameManager <.. HealthManager : notifica derrota
    GameManager <.. CountdownManager : notifica timeout
    IGameOverSubscriber --o GameManager
    IPuzzleManager <|.. PuzzleManager
	ITappable <|.. PuzzleManager


    PuzzleManager *-- FeedbackText
    PuzzleManager *-- PerformanceResult
	PuzzleManager *-- PuzzleHalo : Serialized field
    PuzzleTutorial -- AbstractPuzzleGameplay 
    PuzzleManager *-- AbstractPuzzleGameplay
	
    PuzzleManager -- DataManager
	
    DataManager o-- RunData
    AbstractPuzzleGameplay o-- DataManager
    DataManager -- JournalManager 
    GameManager o-- DataManager
	IPuzzlePausable --o GameManager
    PuzzleManager -- GameManager : reporta resultado


	InputHandler -- Raycaster : serialized field
    InputHandler -- ControlsManager : uses getControls()
	Raycaster -- ITappable : TryGetComponent and calls OnTap()